<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RetrofitSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="action_refresh">刷新</string>
    <string name="get_request">Get请求</string>
    <string name="get_request_with_query_parameters">带有查询参数的请求</string>
    <string name="use_object_as_request_body">使用对象作为请求体</string>
    <string name="form_encoded_request">表单提交</string>
    <string name="file_upload">文件上传</string>

</resources>
